--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.8",
     "date-fns": "^3.2.0",
     "dotenv": "^16.4.5",
+    "express-async-errors": "^3.1.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
