--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "test": "jest",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +27,7 @@
     "date-fns": "^3.2.0",
     "dotenv": "^16.4.5",
     "express-async-errors": "^3.1.1",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
